--- a/.github/workflows/client-deploy-docker.yml
+++ b/.github/workflows/client-deploy-docker.yml
@@ -21,7 +21,7 @@ jobs:
         id: docker_meta
         uses: crazy-max/ghaction-docker-meta@v1
         with:
-          images: ${{ secrets.DOCKERHUB_REPOSITORY }}
+          images: ${{ secrets.DOCKERHUB_REPOSITORY }}/${{ secrets.DOCKER_NAME }}
           tag-semver: |
             {{ version }}
             {{ major }}.{{ minor }}
@@ -53,8 +53,8 @@ jobs:
           password: ${{ secrets.SSH_PASSWORD }}
           port: ${{ secrets.SSH_PORT }}
           script: |
-            docker pull ${{ secrets.DOCKERHUB_REPOSITORY }}/nextjs-docker:latest
+            docker pull ${{ steps.docker_meta.outputs.tags }}
             docker stop $(docker ps -a -q -f "${{ steps.docker_meta.outputs.tags }}")
             docker rm $(docker ps -a -q -f "${{ steps.docker_meta.outputs.tags }}")
-            docker run -d -p 3000:3000 --name nextjs-docker ${{ steps.docker_meta.outputs.tags }}
+            docker run -d -p 3000:3000 --name ${{ secrets.DOCKER_NAME }} ${{ steps.docker_meta.outputs.tags }}
             docker image prune -f
