--- a/.github/workflows/client-ci.yml
+++ b/.github/workflows/client-ci.yml
@@ -8,7 +8,41 @@ on:
       - client/**
   workflow_dispatch:
 
+env:
+  CACHE_DEPENDENCY_PATH: client/node_modules
+
 jobs:
+  install_dependencies:
+    name: Install Dependencies
+    runs-on: ubuntu-latest
+    timeout-minutes: 15
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - name: Compute dependency cache key
+        id: compute_lockfile_hash
+        run: echo "::set-output name=hash::${{ runner.os }}-node-${{ hashFiles('client/yarn.lock') }}"
+
+      - name: Check dependency cache
+        id: cache_dependencies
+        uses: actions/cache@v3
+        with:
+          path: ${{ env.CACHE_DEPENDENCY_PATH }}
+          key: ${{ steps.compute_lockfile_hash.outputs.hash }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - name: Install Dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: yarn install --frozen-lockfile
+    outputs:
+      dependency_cache_key: ${{ steps.compute_lockfile_hash.outputs.hash }}
+      
   client-lint:
     defaults:
       run:
@@ -16,6 +50,8 @@ jobs:
 
     name: Client Lint
     runs-on: ubuntu-latest
+    needs: install_dependencies
+    timeout-minutes: 15
 
     steps:
       - uses: actions/checkout@v3
@@ -25,18 +61,13 @@ jobs:
         with:
           node-version: 18
 
-      - name: Cache dependencies
-        id: cache
+      - name: Check dependency cache
         uses: actions/cache@v3
         with:
-          path: 'client/node_modules'
-          key: ${{ runner.os }}-node-${{ hashFiles('client/yarn.lock') }}
+          path: ${{ env.CACHE_DEPENDENCY_PATH }}
+          key: ${{ steps.compute_lockfile_hash.outputs.hash }}
           restore-keys: |
             ${{ runner.os }}-node-
-
-      - name: Install Dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: yarn install --frozen-lockfile
 
       - name: Lint
         run: yarn lint
@@ -48,7 +79,9 @@ jobs:
 
     name: Client Build
     runs-on: ubuntu-latest
-
+    needs: install_dependencies
+    timeout-minutes: 15
+    
     steps:
       - uses: actions/checkout@v3
 
@@ -57,18 +90,13 @@ jobs:
         with:
           node-version: 18
 
-      - name: Cache dependencies
-        id: cache
+      - name: Check dependency cache
         uses: actions/cache@v3
         with:
-          path: 'client/node_modules'
-          key: ${{ runner.os }}-node-${{ hashFiles('client/yarn.lock') }}
+          path: ${{ env.CACHE_DEPENDENCY_PATH }}
+          key: ${{ steps.compute_lockfile_hash.outputs.hash }}
           restore-keys: |
             ${{ runner.os }}-node-
-
-      - name: Install Dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: yarn install --frozen-lockfile
         
       - name: Build
         run: yarn build
