--- a/.github/workflows/client-ci.yml
+++ b/.github/workflows/client-ci.yml
@@ -13,6 +13,9 @@ env:
 
 jobs:
   install_dependencies:
+    defaults:
+      run:
+        working-directory: client
     name: Install Dependencies
     runs-on: ubuntu-latest
     timeout-minutes: 15
