--- a/.github/workflows/server-ci.yml
+++ b/.github/workflows/server-ci.yml
@@ -14,39 +14,10 @@ env:
 
 jobs:
   install_dependencies:
-    defaults:
-      run:
-        working-directory: server
-        
-    name: Install Dependencies
-    runs-on: ubuntu-latest
-    timeout-minutes: 15
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Setup node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-
-      - name: Compute dependency cache key
-        id: compute_lockfile_hash
-        run: echo "hash=${{ runner.os }}-node-${{ hashFiles(env.HASH_PATH) }}" >> $GITHUB_OUTPUT
-
-      - name: Check dependency cache
-        id: cache_dependencies
-        uses: actions/cache@v3
-        with:
-          path: ${{ env.CACHE_DEPENDENCY_PATH }}
-          key: ${{ steps.compute_lockfile_hash.outputs.hash }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
-      - name: Install Dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: yarn install --frozen-lockfile
-    outputs:
-      dependency_cache_key: ${{ steps.compute_lockfile_hash.outputs.hash }}
+    uses: ./.github/workflows/install-dependency.yml
+    with: 
+      cache-dependency-path: ${{ env.CACHE_DEPENDENCY_PATH }}
+      hash-path: ${{ env.HASH_PATH }}
       
   server-lint:
     defaults:
