--- a/.github/workflows/install-dependency.yml
+++ b/.github/workflows/install-dependency.yml
@@ -8,7 +8,8 @@ on:
       hash-path:
         type: string
         required: true
-        
+    outputs:
+      dependency_cache_key: ${{ jobs.install_dependencies.outputs.dependency_cache_key }}
 jobs:
   install_dependencies:
     defaults:
