--- a/.github/workflows/install-dependency.yml
+++ b/.github/workflows/install-dependency.yml
@@ -43,7 +43,7 @@ jobs:
             ${{ runner.os }}-node-
 
       - name: Install Dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
+        if: steps.cache_dependencies.outputs.cache-hit != 'true'
         run: yarn install --frozen-lockfile
     outputs:
       dependency_cache_key: ${{ steps.compute_lockfile_hash.outputs.hash }}
