--- a/.github/workflows/client-deploy-docker.yml
+++ b/.github/workflows/client-deploy-docker.yml
@@ -11,9 +11,16 @@ on:
   workflow_dispatch:
 
 jobs:
+  get-tag-name:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get tag name
+        run: |
+         echo "Tag name from GITHUB_REF_NAME: $GITHUB_REF_NAME"
+         echo "Tag name from github.ref_name: ${{  github.ref_name }}"
   client-deploy:
     runs-on: ubuntu-latest
-
+    needs: get-tag-name
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
