--- a/.github/workflows/client-deploy-docker.yml
+++ b/.github/workflows/client-deploy-docker.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   client-deploy:
     runs-on: ubuntu-latest
-    if: github.ref_name != "main"
+    if: github.ref_name != 'main'
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
