--- a/.github/workflows/server-deploy.yml
+++ b/.github/workflows/server-deploy.yml
@@ -2,17 +2,50 @@ name: 'Server Deploy'
 
 on:
   push:
-    branches: [main]
     paths:
       - server/**
+    branches:
+      - main
+    tags:
+      - '**'
   workflow_dispatch:
 
 jobs:
-  server-deploy:
+  client-deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Server Deploy
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Docker meta
+        id: docker_meta
+        uses: crazy-max/ghaction-docker-meta@v1
+        with:
+          images: ${{ secrets.DOCKERHUB_REPOSITORY }}/${{ secrets.BE_DOCKER_NAME }}
+          tag-semver: |
+            {{ version }}
+            {{ major }}.{{ minor }}
+        
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+        
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with: 
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and Push to DockerHub
+        uses: docker/build-push-action@v3
+        with: 
+          context: ./server
+          file: ./server/docker/Dockerfile
+          push: true
+          tags: ${{ steps.docker_meta.outputs.tags }}
+          labels: ${{ steps.docker_meta.outputs.labels }}
+          platforms: linux/amd64
+        
+      - name: Client Deploy
         uses: appleboy/ssh-action@v0.1.4
         with:
           host: ${{ secrets.SSH_HOST }}
@@ -20,10 +53,8 @@ jobs:
           password: ${{ secrets.SSH_PASSWORD }}
           port: ${{ secrets.SSH_PORT }}
           script: |
-            cd ~/BARAM/server
-            git checkout -- .
-            git pull
-            pm2 stop baram_server
-            yarn install
-            yarn build
-            pm2 restart baram_server
+            docker pull ${{ steps.docker_meta.outputs.tags }}
+            docker stop $(docker ps -a -q -f "NAME=${{ secrets.BE_DOCKER_NAME }}")
+            docker rm $(docker ps -a -q -f "NAME=${{ secrets.BE_DOCKER_NAME }}")
+            docker run -d -p 3000:3000 --name ${{ secrets.BE_DOCKER_NAME }} ${{ steps.docker_meta.outputs.tags }}
+            docker image prune -f
