--- a/.github/workflows/client-deploy-docker.yml
+++ b/.github/workflows/client-deploy-docker.yml
@@ -39,7 +39,7 @@ jobs:
         uses: docker/build-push-action@v3
         with: 
           context: ./client
-          file: ./client/docker/Dockerfile
+          file: ./client/docker/prod.Dockerfile
           push: true
           tags: ${{ steps.docker_meta.outputs.tags }}
           labels: ${{ steps.docker_meta.outputs.labels }}
