--- a/.github/workflows/server-deploy.yml
+++ b/.github/workflows/server-deploy.yml
@@ -39,7 +39,7 @@ jobs:
         uses: docker/build-push-action@v3
         with: 
           context: ./server
-          file: ./server/docker/Dockerfile
+          file: ./server/docker/prod.Dockerfile
           push: true
           tags: ${{ steps.docker_meta.outputs.tags }}
           labels: ${{ steps.docker_meta.outputs.labels }}
