--- a/.github/workflows/server-deploy.yml
+++ b/.github/workflows/server-deploy.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Write .env file
-        run: echo "${{ secrets.BE_ENV }}" | base64 --decode > .env
+        run: echo "${{ secrets.BE_ENV }}" | base64 --decode > ./server/.env
 
       - name: Docker meta
         id: docker_meta
