--- a/.github/workflows/server-deploy.yml
+++ b/.github/workflows/server-deploy.yml
@@ -59,5 +59,5 @@ jobs:
             docker pull ${{ steps.docker_meta.outputs.tags }}
             docker stop $(docker ps -a -q -f "NAME=${{ secrets.BE_DOCKER_NAME }}")
             docker rm $(docker ps -a -q -f "NAME=${{ secrets.BE_DOCKER_NAME }}")
-            docker run -d -p 4000:4000 --name ${{ secrets.BE_DOCKER_NAME }} ${{ steps.docker_meta.outputs.tags }}
+            docker run -d -p 4000:4000 --name ${{ secrets.BE_DOCKER_NAME }} ${{ steps.docker_meta.outputs.tags }} --add-host=host.docker.internal:host-gateway
             docker image prune -f
